<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/lesson_type_corner_radius"
    android:gravity="center">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="48dp"
        android:layout_height="36dp"
        android:layout_gravity="start"
        android:layout_marginBottom="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Вернуться назад"
        android:src="@drawable/ic_arrow_back" />


    <TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/login_title"
android:textSize="@dimen/text_size_header"
android:textStyle="bold"
android:layout_marginBottom="@dimen/lesson_type_corner_radius" />

<com.google.android.material.textfield.TextInputLayout
android:id="@+id/textInputEmail"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginBottom="@dimen/lesson_detail_save_button_margin">

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/editTextEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/email_hint" />

</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
android:id="@+id/textInputPassword"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginBottom="@dimen/lesson_type_corner_radius"
app:passwordToggleEnabled="true">  <!-- Теперь этот атрибут будет найден -->

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/editTextPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password_hint"
    android:inputType="textPassword" />

</com.google.android.material.textfield.TextInputLayout>

<Button
android:id="@+id/buttonLogin"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/button_login"
android:layout_marginBottom="@dimen/lesson_detail_8dp" />

<Button
android:id="@+id/buttonGoToRegister"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/button_register_prompt"
style="@style/Widget.MaterialComponents.Button.TextButton" />

    </LinearLayout>