<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lessonItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="@dimen/lesson_detail_input_margin_bottom"
    android:background="@drawable/lesson_item_background"
    android:padding="@dimen/lesson_detail_input_margin_bottom"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground">


    <TextView
        android:id="@+id/lessonTime"
        android:layout_width="@dimen/dialog_rgb_input_width"
        android:layout_height="wrap_content"
        android:text="09:00\n10:30"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/colorOnSurfaceVariant"
        android:gravity="center" />

    <View
        android:layout_width="@dimen/lesson_detail_color_button_size_1dp"
        android:layout_height="match_parent"
        android:background="@color/colorOutline"
        android:layout_marginStart="@dimen/lesson_detail_8dp"
        android:layout_marginEnd="@dimen/lesson_detail_input_margin_bottom" />

    <LinearLayout
        android:layout_width="@dimen/lesson_detail_0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lessonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_new_lesson_name"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:textColor="@color/colorOnSurface" />

        <TextView
            android:id="@+id/lessonRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_new_lesson_room"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/colorOnSurfaceVariant"
            android:layout_marginTop="@dimen/lesson_item_margin_bottom" />

        <TextView
            android:id="@+id/lessonTeacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_new_lesson_teacher"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/colorOnSurfaceVariant" />

    </LinearLayout>

    <TextView
        android:id="@+id/lessonType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson_type_lecture"
        android:textSize="@dimen/text_size_small"
        android:padding="@dimen/lesson_item_margin_bottom"
        android:textColor="@color/colorOnPrimary"
        android:layout_marginStart="@dimen/lesson_detail_8dp" />

</LinearLayout>