<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary">
    <TextView
        android:layout_width="@dimen/lesson_detail_0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_header"
        android:textStyle="bold"
        android:textColor="@color/colorOnPrimary"
        android:gravity="center" />
    <ImageButton
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="@dimen/activity_horizontal_margin" />
    </LinearLayout>
    <!-- Навигация по неделям -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="@dimen/lesson_detail_8dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/prevWeekBtn"
                android:layout_width="@dimen/dialog_rgb_input_height"
                android:layout_height="@dimen/dialog_rgb_input_height"
                android:text="@string/button_prev_week"
                android:textSize="@dimen/text_size_header"
                android:textColor="@color/colorOnPrimary"
                android:background="@drawable/week_nav_button"
                android:layout_marginEnd="@dimen/lesson_detail_input_padding" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/weekRangeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="29 апр - 5 мая"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/colorOnPrimary"
                    android:gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/weekTypeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/navigation_week_type_numerator"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/week_navigation_text_default"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/lesson_detail_color_button_size" />

            </LinearLayout>

            <Button
                android:id="@+id/nextWeekBtn"
                android:layout_width="@dimen/dialog_rgb_input_height"
                android:layout_height="@dimen/dialog_rgb_input_height"
                android:text="@string/button_next_week"
                android:textSize="@dimen/text_size_header"
                android:textColor="@color/colorOnPrimary"
                android:background="@drawable/week_nav_button"
                android:layout_marginStart="@dimen/lesson_detail_input_margin_bottom" />

        </LinearLayout>

    </LinearLayout>

    <!-- Панель дней недели (БЕЗ HorizontalScrollView) -->
    <LinearLayout
        android:id="@+id/daysContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="@dimen/lesson_detail_8dp"
        android:gravity="center"
        android:weightSum="7">

    </LinearLayout>
    <!-- КОНТЕЙНЕР ДЛЯ FRAGMENT -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>